[tool.poetry]
name = "SQANTI3"
version = "1.1.0"
description = "Quality Control of Long-Read Defined Transcriptomes"
authors = ["Miles Smith <mileschristiansmith@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "1.4.3"
cfgv = "3.1.0"
decorator = "4.4.2"
distlib = "0.3.0"
filelock = "3.0.12"
identify = "1.4.19"
importlib-metadata = "1.6.1"
joblib = "0.15.1"
networkx = "2.4"
nodeenv = "1.4.0"
pyyaml = "5.3.1"
threadpoolctl = "2.1.0"
toml = "0.10.1"
virtualenv = "20.0.20"
zipp = "3.1.0"
scikit-learn = "0.23.1"
scipy = "1.4.1"
pandas = "1.0.4"
pyvcf = "0.6.8"
cython = "0.29.20"
pysam = "0.16.0"
psutil = "5.7.0"
bx-python = "0.8.8"
biopython ="1.76"
bcbio-gff = "0.6.6"
numpy = "1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
